# PinkRabbitMQ

./: .gitignore  AddIn.sln  BuildConfig  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.MD  CONTRIBUTORS  LICENSE  MANIFEST.XML  PinkRabbitMQ.sln  README.md
.github/workflows/: build.yml  build_dev.yml  cmake.yml  entry.yml  msbuild.yml
CI/: config.yml
NativeAPI/: AddInNative.vcxproj  AddInNative.vcxproj.filters  CAddInNative.cpp  CAddInNative.h  FieldValidators.h  Makefile  MessageObject.cpp  RabbitMQClient.cpp  RabbitMQClient.h  Resource.rc  SimplePocoHandler.cpp  SimplePocoHandler.h  ThreadLooper.cpp  ThreadSafeQueue.cpp  Utils.cpp  Utils.h  dllmain.cpp
NativeAPI/addin/: stdafx.cpp
PinkRabbitMQLinux/: CMakeLists.txt  PinkRabbitMQLinux.sln  PinkRabbitMQLinux.vcxproj  PinkRabbitMQLinux.vcxproj.filters  RabbitMQClientTest.cpp  main.cpp
PinkRabbitMQLinux/src/: AddInNative.cpp  AddInNative.def  AddInNative.h  ConversionWchar.cpp  ConversionWchar.h  InputValidator.cpp  InputValidator.h  MessageObject.cpp  MyTCPHandler.cpp  RMQConnection.cpp  RMQConnection.h  RabbitMQClient.cpp  RabbitMQClient.h  ThreadLooper.cpp  ThreadRunner.cpp  ThreadSafeQueue.cpp  Utils.cpp  Utils.h  dllmain.cpp  stdafx.cpp  stdafx.h  testMessage560kb.txt
PinkRabbitMQLinux/src/amqp/include/amqpcpp/: endian.h
PinkRabbitMQLinux/src/include/: IAndroidComponentHelper.h  types.h
PinkRabbitMQWindows/: CMakeLists.txt
PinkRabbitMQWindows/NativeAPI/: AddInNative.def  AddInNative.vcxproj  AddInNative.vcxproj.filters  AuthException.cpp  CAddInNative.cpp  CAddInNative.h  CMakeLists.txt  MessageObject.cpp  RabbitMQClient.cpp  RabbitMQClient.h  SafeQueue.cpp  SimplePocoHandler.cpp  SimplePocoHandler.h  ThreadSafeQueue.cpp  Utils.cpp  Utils.h  dllmain.cpp
PinkRabbitMQWindows/NativeAPI/addin/: stdafx.h
PinkRabbitMQWindows/include/: MANIFEST.xsd  addin.idl  addinlib.h  types.h
PinkRabbitMQWindows/libs/openssl/: opensslconf.h  opensslv.h
PinkRabbitMQWindows/libsPrecompiled/debugPrec/win32Prec/: PocoCryptod.lib  PocoJSONd.lib  PocoNetSSLWind.lib  PocoNetSSLd.lib  PocoNetd.lib  PocoUtild.lib  PocoXMLd.lib  libcryptod.lib  libssld.lib  libsslmtd.lib
PinkRabbitMQWindows/libsPrecompiled/debugPrec/x64Prec/: PocoCryptod.lib  PocoJSONd.lib  PocoNetSSLWind.lib  PocoNetSSLd.lib  PocoNetd.lib  libcryptod.lib  libssld.lib
PinkRabbitMQWindows/libsPrecompiled/releasePrec/win32Prec/: PocoJSONmt.lib  PocoNetSSLWinmt.lib  PocoNetSSLmt.lib  PocoXMLmt.lib  libsslmt.lib
PinkRabbitMQWindows/libsPrecompiled/releasePrec/x64Prec/: PocoNetSSLWinmt.lib  PocoNetSSLmt.lib  PocoUtilmt.lib  amqpcpp.lib  libsslmt.lib
include/: mobile.h
lib/win_Win32/: PocoCryptomt.lib  PocoJSONmt.lib  PocoNetSSLWinmt.lib  PocoNetSSLmt.lib  PocoUtilmt.lib  PocoXMLmt.lib  amqpcppmt.lib
lib/win_Win32/cfg_Release/: PocoCryptomt.lib  PocoUtilmt.lib  amqpcpp.lib
lib/win_x64/: PocoCryptomt.lib  PocoNetSSLWinmt.lib  PocoNetSSLmt.lib  amqpcppmt.lib
lib/win_x64/cfg_Debug/: PocoUtild.lib  PocoXMLd.lib
lib/win_x64/cfg_Release/: PocoCryptomt.lib  PocoJSONmt.lib  amqpcpp.lib
libsPrecompiled/debugPrec/win32Prec/: PocoFoundationd.lib
libsPrecompiled/debugPrec/x64Prec/: PocoFoundationd.lib
licenses/: POCO_LICENSE
linux/: CMakeLists.txt  Dockerfile  build.sh  common.cpp  common.h  compose.yaml  docker-compose.yml  test.conf.example  tests.cpp
package/: MANIFEST.XML
src/: AddInNative.cpp  Connection.cpp  Connection.h  RabbitMQClient.cpp  RabbitMQClient.h  RabbitMQClientNative.cpp  RabbitMQClientNative.h  Utils.cpp  Utils.h
src/addin/: AddInDefBase.h  ComponentBase.h  IAndroidComponentHelper.h  IMemoryManager.h  addinlib.h  com.h  mobile.h  types.h
src/addin/biterp/: CallContext.hpp  Component.hpp  Error.hpp  Logger.hpp  MemoryManager.hpp  Names.hpp
src/addin/jni/: jnienv.h
src/addin/test/: Connection.hpp  LinuxCTest.hpp  WindowsCppUnit.hpp
src/linux/: ConnectionImpl.cpp  ConnectionImpl.h  TCPHandler.h
src/linux/libevent/event2/: event-config.h
src/windows/: ConnectionImpl.cpp  ConnectionImpl.h  SimplePocoHandler.cpp  SimplePocoHandler.h
src/windows/openssl/: applink.c  asn1err.h  async.h  bioerr.h  bn.h  cmperr.h  cmserr.h  comp.h  comperr.h  conferr.h  configuration.h  core.h  core_dispatch.h  dh.h  dherr.h  dsa.h  e_os2.h  e_ostime.h  ec.h  evp.h  evperr.h  fips_names.h  hpke.h  http.h  httperr.h  macros.h  obj_mac.h  opensslv.h  pem.h  pkcs12err.h  prov_ssl.h  proverr.h  provider.h  quic.h  rand.h  randerr.h  rsa.h  self_test.h  sha.h  srtp.h  (+11 more)
test/: addin1c.py  amqp.py  python_test.cpp  test_amqp.py  test_ext.py  test_util.py
windows/: WindowsAddin.sln  msbuild.xml
windows/WindowsAddin/: AddinNative.def  WindowsAddin.vcxproj  WindowsAddin.vcxproj.filters
windows/tests/: common.cpp  common.h  test.conf.example  tests.cpp  tests.vcxproj  tests.vcxproj.filters
